--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 tokio = { version = "1.39.2", features = ["full"] }
 crossterm = "0.27.0"
 rand = "0.9.0-alpha.2"
+rusty_time = "1.1.0"
